cmd/pint/tests/0078_repeated_group.txt
pint.error --no-color lint --require-owner rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=INFO msg="Finding all rules to check" paths=["rules"]
level=WARN msg="Failed to parse file content" err="YAML syntax error at line 4: duplicated group name `name`" path=rules/strict.yml lines=1-5
rules/strict.yml:4 Fatal: duplicated group name `name` (yaml/parse)
 4 | - name: foo

level=INFO msg="Problems found" Fatal=1
level=ERROR msg="Fatal error" err="found 1 problem(s) with severity Bug or higher"
-- rules/strict.yml --
groups:
- name: foo
  rules: []
- name: foo
  rules: []
